envoy.yaml
---
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 8081
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: http1
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: frontend
              domains:
              - "web.translate.demo.gs"
              virtual_clusters:
                - name: web
                  headers:
                    - name: ":path"
                      prefix_match: "/"
              retry_policy:
                retry_on: "connect-failure,5xx"
                num_retries: 5
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: frontend
            - name: backend
              domains:
              - "api.translate.demo.gs"
              virtual_clusters:
                - name: api
                  headers:
                    - name: ":path"
                      prefix_match: "/"
              retry_policy:
                retry_on: "connect-failure,5xx"
                num_retries: 5
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: api
          http_filters:
          - name: envoy.router
            typed_config: {}
  clusters:
  - name: frontend
    connect_timeout: 1.00s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: frontend
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 8001
                ipv4_compat: true
  - name: api
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: api
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 8001
                ipv4_compat: true
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
